--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.0",
+    "react-simple-star-rating": "^3.0.0",
+    "react-star-ratings": "^2.3.0",
     "react-tag-input": "^6.7.3",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^1.0.1"
